2009-04-20 Holger Vogt
 * src/spice.def: for creating dll
 * src/makefile.am: libs for tclspice MINGW added
 * configure.in: automatically select building shared or static libraries

2009-04-18 Dietmar Warning
 * devices/bsim3soi/*.c, *.h, tests/bsim3soi/*.cir, *.out, *.mod, DEVICES: 
   Update to actual version 4.1, contrary to the comment in Berkeley doc's the model
   is not full downward compatibel to version 4.0
 * spicelib/parser/inpgmod.c, 251: using strcmp again, instead of strstr - 
   we need absolute equality to distinguish between node and model names.

2009-04-18 Holger Vogt
 * INSTALL: chapter 1.5 added (separate object file directory tree)

2009-04-17 Holger Vogt
 * resource.c: 27 allow compilation into a build directory

2009-04-14 Holger Vogt
  * control.c: remove bug no. 2724127 repeat loop inside another loop
  * dotcards.c, inp.c, measure.c: patch submitted by Bill Swartz added 

2009-04-12 Holger Vogt
  * spicenum.c, xpressn.c: dico and inst_dico no longer removed in nupa_done 
    because they are needed in .measure
  * lexical.c: size of arrays doubled in cp_lexer() to avoid "line too long"
    message
  * runcoms.c: enter do_measure() only if ft_curckt->ci_last_an has a value
    (bug no. 2751855) 
  * winmain.c: winmessage() only if message not into log file
  * windisp.c: WIN_Text() now uses True Type Fonts and may display text
    vertically
  * misc/getopt_long_bsd.c getopt_bsd.h: add a BSD version of getopt_long()
    getopt.c, getopt1.c, getopt.h removed
  * misc/makefile.am: add (remove) files  
  * configure.in: check for getopt.h and getopt_long(), if not found, use 
    internal functions in getopt_long_bsd.c 
    Replace package name ng-spice-rework with ngspice
    Change version number to 19
  * main.c: chosse proper getopt_long(), winmessage()
  * visualc/vngspice.vcproj: files added (removed)
  * visualc/include/config.h: new version 19      

2009-04-10 Holger Vogt
  * spicenum.c: memory leak removed
  
2009-04-05 Holger Vogt