@@ -2,6 +2,7 @@
  * src/spice.def: for creating dll
  * src/makefile.am: libs for tclspice MINGW added
  * configure.in: automatically select building shared or static libraries
+ * tclspice.c: some additions for MS Visual 2008
 
 2009-04-18 Dietmar Warning
  * devices/bsim3soi/*.c, *.h, tests/bsim3soi/*.cir, *.out, *.mod, DEVICES: 
